# fullstack-discussion-forum

server/: .gitignore  main.py  pyproject.toml
server/api/v1/authentication/: __init__.py
server/api/v1/authentication/controllers/: __init__.py  login.py  sign_in.py  sign_in_a_user.py  signup.py
server/api/v1/authentication/models/: __init__.py  login.py  sign_in.py  sign_up.py  signin.py  signup.py
server/api/v1/authentication/routes/: login.py  sign_in.py  sign_up.py  signup.py
server/api/v1/authentication/services/: __init__.py  auth_by_id.py  create_access_token.py  hash_password.py  validate_password.py  verify_access_token.py  verify_password.py
server/api/v1/threads/: __init__.py
server/api/v1/threads/controllers/: __init__.py  comment_create.py  comment_delete.py  comment_get_all.py  reply_create.py  reply_get_all.py  thread_create.py  (+4 more)
server/api/v1/user/: __init__.py
server/authentication/: controller.py  login_route.py  model.py  route.py  utils.py
server/chains/: __init__.py
server/chains/controller/: chain.py
server/chains/route/: chain.py
server/config/: database.py  schema.py
server/core/: config.py  constants.py  crud.py  depedencies.py  schema.py  security.py
server/migrations/: env.py
server/migrations/versions/: 579ab9276cc1_initial_migration.py  72d31ed6bce3_god_abeg.py  fe301141be40_db_update.py
server/threads/: controller.py  controllers.py  model.py  route.py  routes.py
server/threads/controller/: thread.py
server/threads/route/: thread.py
server/user/: model.py
server/utils/: model.py  print.py  response.py
(+16 files in other folders)
